force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_Lessor_f__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Lessor_f__c</fullName>
    <formula>IF((Lessor_Fee__c &gt; 0|| Professional_Services_Lessor_Fee__c &gt;0), Sub_Total_Lessor__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal - Lessor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>