force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_Mat_Equip_wo_SubCon__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Mat_Equip_wo_SubCon__c</fullName>
    <formula>Total_Equip_Mat_w_o_Sub_Con_Cost__c * (1+  Sales_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal Mat. &amp; Equip. w/o. SubCon.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>