force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_Material_Equipment__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Material_Equipment__c</fullName>
    <formula>SubTotal_Material_Equipment_w_SubCon__c +  SubTotal_Mat_Equip_wo_SubCon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal Material &amp; Equipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>