force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_Material_Equipment_w_SubCon__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Material_Equipment_w_SubCon__c</fullName>
    <formula>Total_Equip_Mat_w_Sub_Con_Cost__c * (1 +  Sales_Tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal Material &amp; Equipment w. SubCon.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>