force-app/main/default/objects/NCMT_Project_Markup__c/fields/Subtotal_OS_Self__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_OS_Self__c</fullName>
    <formula>SubTotal_Out_SourcedWork__c +  SubTotal_SelfPerformedWork__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal OS&amp;Self Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>