force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_Out_SourcedWork__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Out_SourcedWork__c</fullName>
    <formula>SubTotal_with_SubCon__c + (SubTotal_with_SubCon__c *(Prime_Con_OSWork_Homeoff_Overhead__c + Prime_Con_OSWork_Jobsite_Overhead__c + (1 + Prime_Con_OSWork_Homeoff_Overhead__c + Prime_Con_OSWork_Jobsite_Overhead__c)*(
Prime_Con_OSWork_Profit__c + (1+Prime_Con_OSWork_Profit__c)*(Prime_Con_OSWork_Commission__c+(1+Prime_Con_OSWork_Commission__c)*(Prime_Con_OSWork_Bond__c+Professional_Services_Fees_OSWork__c*(1+Prime_Con_OSWork_Bond__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal - Out-SourcedWork</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>