force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_SelfPerformedWork__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_SelfPerformedWork__c</fullName>
    <formula>SubTotal_w_o_SubCon__c+ (SubTotal_w_o_SubCon__c*(Prime_Con_SelfWork_HomeOff_Overhead__c+ Prime_Con_SelfWork_JobSiteOverhead__c+ (1 + Prime_Con_SelfWork_HomeOff_Overhead__c+ Prime_Con_SelfWork_JobSiteOverhead__c)*(
Prime_Con_SelfWork_Profit__c + (1+Prime_Con_SelfWork_Profit__c)*(Prime_Con_SelfWork_Commission__c+(1+Prime_Con_SelfWork_Commission__c)*(Prime_Con_SelfWork_Bond__c+Professional_Services_Fees_SelfWork__c*(1+Prime_Con_SelfWork_Bond__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal - SelfPerformedWork</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>