force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_with_SubCon__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_with_SubCon__c</fullName>
    <formula>(Site_Design_Contingency__c + 1) * (  Total_Cost_w_Subcon_Markups__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal with SubCon.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>