force-app/main/default/objects/NCMT_Project_Markup__c/fields/Total_CECCA__c.field-meta.xml
<CustomField>
    <fullName>Total_CECCA__c</fullName>
    <formula>( Gross_Receipt_State_Construction__c +1)* Sub_Total_Lessor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CECCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>