force-app/main/default/objects/NCMT_Project_Markup__c/fields/Total_Cost_w_o_SubCon_Markups__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_w_o_SubCon_Markups__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Cost w/o SubCon. Markups</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>