force-app/main/default/objects/NCMT_Project_Markup__c/fields/Total_EMIC__c.field-meta.xml
<CustomField>
    <fullName>Total_EMIC__c</fullName>
    <formula>Construction_AE__c +  Construction_Cx__c +  CM_Construction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of AE Services, CM Services, Commissioning Services</inlineHelpText>
    <label>Total Construction Phase</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>