force-app/main/default/objects/NCMT_Project_Markup__c/fields/Total_Equip_Mat_w_o_Sub_Con_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Equip_Mat_w_o_Sub_Con_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Equip. &amp; Mat. w/o. Sub Con. Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>