force-app/main/default/objects/NCMT_Project_Markup__c/fields/Total_Labor_w_SubCon__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_w_SubCon__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Labor w. SubCon.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>