force-app/main/default/objects/NCMT_Project_Markup__c/recordTypes/DES_O_P_Project_Markup.recordType-meta.xml
<RecordType>
    <fullName>DES_O_P_Project_Markup</fullName>
    <active>true</active>
    <description>For O&amp;P Cost depending on project delivery method</description>
    <label>DES O&amp;P Project Markup</label>
</RecordType>