force-app/main/default/objects/NCMT_Project_Markup__c/recordTypes/DES_Project_Markup.recordType-meta.xml
<RecordType>
    <fullName>DES_Project_Markup</fullName>
    <active>true</active>
    <description>Depending on project delivery method</description>
    <label>DES Project Markup</label>
</RecordType>