force-app/main/default/objects/NCMT_Project_Markup__c/validationRules/Check_for_EDRC_Input_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_EDRC_Input_Type</fullName>
    <active>true</active>
    <description>If Input Type is Percent, then sum of AE, Cm, Cx should not exceed 100%</description>
    <errorConditionFormula>TEXT( EDRC_Input_Type__c) ==&apos;Percent&apos; &amp;&amp; (Design_AE__c +  Design_Cx__c + Design_Phase_CM__c)/100&gt;1</errorConditionFormula>
    <errorDisplayField>Design_Cx__c</errorDisplayField>
    <errorMessage>Total of AE, CM, Cx of EDRC Percent is more than 100%</errorMessage>
</ValidationRule>