force-app/main/default/objects/NCMT_Project_Markup__c/validationRules/Check_for_Lessor_Les_Fees.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Lessor_Les_Fees</fullName>
    <active>false</active>
    <description>Based on project delivery method, need to allow user to change field</description>
    <errorConditionFormula>IF( text(Project_Name__r.Project_Delivery_Method__c)==&apos;TI - Leasing&apos;,false,true)</errorConditionFormula>
    <errorDisplayField>Lessor_Fee__c</errorDisplayField>
    <errorMessage>For the selected project delivery method, it cannot apply.</errorMessage>
</ValidationRule>