force-app/main/default/objects/NCMT_Project_Markup__c/validationRules/Check_for_PrimeCon_Prof_Serv_Fees.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_PrimeCon_Prof_Serv_Fees</fullName>
    <active>false</active>
    <description>Based on project delivery method, need to allow user to change field</description>
    <errorConditionFormula>IF( text(Project_Name__r.Project_Delivery_Method__c)==&apos;Design Build - Bridging&apos; ||text(Project_Name__r.Project_Delivery_Method__c)==&apos;Design Build - Owned&apos;,false,true)</errorConditionFormula>
    <errorDisplayField>Professional_Services_Fees_SelfWork__c</errorDisplayField>
    <errorMessage>For the selected project delivery method, it cannot apply.</errorMessage>
</ValidationRule>